# notso

./: AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
data/: sample_docs.json
docs/: ARCHITECT.md  INGEST.md  MASTER_PROMPT.md  QA.md  REPO_BLUEPRINT.md  RESOURCE_GOVERNANCE.md  RETRIEVAL.md  SERVE_UI.md  STORAGE.md  WORKFLOW.md  dependency_gate.py
src/notso/: __init__.py  cli.py  engine.py  resource_plan.py  sample_docs.py
src/notso/core/: models.py  ranker.py
src/notso/ingest/: loader.py
src/notso/storage/: formats.md
src/notso/web/: __init__.py  app.py
src/notso/web/templates/: home.html  results.html
src/search/: __init__.py  engine.py  index.py  ingest.py
tests/: __init__.py  test_cli.py  test_engine.py  test_ingest.py  test_resource_plan.py  test_web.py
tools/: dependency_gate.py  run_checks.py
