[project]
name = "notso"
version = "0.1.0"
description = "Notso search engine"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
notso = "notso.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
